# rbx-app

./: .gitignore  .graphqlrc  Cargo.toml  README.md  Trunk.toml  debug.sh  general-main.css  index.html  indexJson.html  package-lock.json  package.json  publish-aker.sh  publish-robox.sh  query.graphql  schema.graphql  style.css  update_schema.sh  update_schema_dev.sh  webpack.config.js
crates/roboxmaker-graphql/: Cargo.toml
crates/roboxmaker-graphql/src/: graphql_service.rs  lib.rs  protocol.rs
crates/roboxmaker_activity/: Cargo.toml
crates/roboxmaker_activity/src/: activity-v-calendar.js  activity_card.rs  activity_card_classes.rs  activity_list.rs  lib.rs  v_calendar_activity.rs
crates/roboxmaker_ckeditor/: Cargo.toml
crates/roboxmaker_ckeditor/src/: ckeditor.js  ckeditor.rs  lib.rs
crates/roboxmaker_classes/: Cargo.toml
crates/roboxmaker_classes/src/: classes_card.rs  classes_list.rs  classes_list_home.rs  classes_page.rs  classes_select.rs  date_of_classes_list.rs  lib.rs
crates/roboxmaker_degree/: Cargo.toml
crates/roboxmaker_degree/src/: degree_content.rs  degree_content_student.rs  degree_list.rs  lib.rs
crates/roboxmaker_files/: Cargo.toml
crates/roboxmaker_files/src/: files_card.rs  files_list.rs  files_list_classes.rs  files_select.rs  files_user_card.rs  files_user_list.rs  lib.rs  user_files.rs
crates/roboxmaker_home/: Cargo.toml
crates/roboxmaker_home/src/: add_users.rs  get_class_profile_handler.rs  home.rs  home_staff.rs  lib.rs
crates/roboxmaker_lesson/: Cargo.toml
crates/roboxmaker_lesson/src/: lesson_card.rs  lesson_list.rs  lesson_list_home.rs  lesson_page.rs  lesson_page_view.rs  lesson_select.rs  lib.rs
crates/roboxmaker_login/: Cargo.toml
crates/roboxmaker_login/src/: forgot_password.rs  lib.rs  login.rs  signup.rs
crates/roboxmaker_main/: Cargo.toml
crates/roboxmaker_main/src/: config.rs  lang.rs  lib.rs
crates/roboxmaker_menu/: Cargo.toml
crates/roboxmaker_menu/src/: menu.rs
crates/roboxmaker_message/: Cargo.toml
crates/roboxmaker_message/src/: create_message.rs  lib.rs  list_responses.rs  message_card.rs  message_list.rs  message_list_post.rs  message_list_robot.rs  reply_message.rs  response_message.rs  user_messages.rs
crates/roboxmaker_models/: Cargo.toml  classes_mut.graphql  classes_sub.graphql  general.graphql  lesson_mut.graphql  lesson_sub.graphql  post_mut.graphql  post_sub.graphql  query.graphql  quiz.graphql  robot_mut.graphql  robot_sub.graphql  schema.graphql  test.graphql
crates/roboxmaker_models/src/: activity_model.rs  auth.rs  classes_model.rs  files_model.rs  general_model.rs  grade_model.rs  group_model.rs  lesson_model.rs  lib.rs  meetings_model.rs  message_model.rs  post_model.rs  quiz_model.rs  registration.rs  robot_model.rs  school_model.rs  teacher_resource.rs  user_model.rs
crates/roboxmaker_myspace/: Cargo.toml
crates/roboxmaker_myspace/src/: lib.rs  my_space.rs
crates/roboxmaker_post/: Cargo.toml
crates/roboxmaker_post/src/: lib.rs  post.rs  post_list_home.rs  post_page.rs  post_page_view.rs  post_select.rs  posts_card.rs  posts_list.rs
crates/roboxmaker_quiz_panel/: Cargo.toml
crates/roboxmaker_quiz_panel/src/: lib.rs  questions.js  quiz_charts.rs  quiz_handle.rs  quiz_metrics.rs  quiz_panel.rs  quiz_view.rs
crates/roboxmaker_quizzes/: Cargo.toml
crates/roboxmaker_quizzes/src/: handle.rs  lib.rs  quiz.rs  quiz_card.rs  quiz_list_home.rs  quiz_page.rs  quiz_select.rs  quizcreator.rs  quizeditor.rs  quizfunctions.rs  quizrender.rs  quizresponder.rs  quizviewer.rs  quizzes_list.rs
crates/roboxmaker_schools/: Cargo.toml
crates/roboxmaker_schools/src/: data_schools.rs  lib.rs  list_schools.rs  school_view.rs
crates/roboxmaker_searches/: Cargo.toml
crates/roboxmaker_searches/src/: lib.rs  search_classes_group.rs  search_degree_list.rs  search_home.rs  search_lesson_group.rs  search_meetings_list.rs  search_posts_group.rs  search_robots_group.rs  search_school_list.rs
crates/roboxmaker_teacher_resource/: Cargo.toml
crates/roboxmaker_teacher_resource/src/: lib.rs  tr_card.rs  tr_list.rs  tr_page.rs  tr_select.rs
crates/roboxmaker_types/: Cargo.toml
crates/roboxmaker_types/src/: types.rs
crates/roboxmaker_user/: Cargo.toml
crates/roboxmaker_user/src/: contributions_and_comments.rs  last_robots_card.rs  last_robots_list.rs  lib.rs  members_list_home.rs  my_profile.rs  user_page.rs  user_robots.rs  user_select.rs  users_card.rs  users_list.rs
crates/roboxmaker_utils/: Cargo.toml
crates/roboxmaker_utils/src/: button.rs  functions.rs  funtions.js  funtions.rs  lib.rs  local_storage.rs  post_page_author.rs  user_pic.rs
crates/roboxmaker_whiteboard/: Cargo.toml
crates/roboxmaker_whiteboard/src/: lib.rs  whiteboard_view.rs
scripts/: COLEGIO-BETHANIA.xlsx  COLEGIO-CRISTOBAL-COLON.xlsx  EvaluacionDocente4to-6to.json  EvaluacionDocenteS1-B2.json  Extras06.xlsx  Extras08.xlsx  Licencias2022.xlsx  Rep01.xlsx  addClassGroupUser.js  add_license.js  add_robot.js  add_students.js  add_user_to_member_group.js  auth_access_token.sh  auth_refresh_token.sh  checkUsers.js  class_group_add.js  class_lessons_add.js  class_robot_add.js  create_lessons.js  delete_users.js  delete_users_hasura.js  delete_users_keycloak.js  deleted_users_staff.json  deleted_users_student.json  deleted_users_teacher.json  filtered_users_staff.json  filtered_users_teacher.json  getEmail.js  get_users_keycloak.js  gql_op.js  group_member_add.js  group_order.js  inventory_group_lesson_add.js  jsonToExcel.js  jsonToJson.js  lesson_group_add.js  lesson_group_create.js  lessons.csv  lessons.json  (+26 more)
src/: document.html  lib.rs  main.rs
static/: ckeditor.js  ckeditor.react.js  ckeditor.react.js.map  index.html
styles/: card_classes_list.scss  card_comments.scss  card_degree.scss  card_files_list.scss  card_lesson_list.scss  card_meetings_home.scss  card_member_list.scss  card_members.scss  card_post_list.scss  card_robot_list.scss  card_robot_my_space.scss  card_robots.scss  card_user_robots.scss  cards.scss  fullscreen_loader_degree.scss  last_robots_card.scss  main.scss  skeleton.scss
(+56 files in other folders)
