[package]
name = "aker-app"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@vertexstudio.co>"]
edition = "2018"


[workspace]
members = [
    "crates/*",
]

[dependencies]
roboxmaker_activity = { path = "crates/roboxmaker_activity" }
roboxmaker_ckeditor = { path = "crates/roboxmaker_ckeditor" }
roboxmaker_classes = { path = "crates/roboxmaker_classes" }
roboxmaker_degree = { path = "crates/roboxmaker_degree" }
roboxmaker_utils = { path = "crates/roboxmaker_utils" }
roboxmaker_files = { path = "crates/roboxmaker_files" }
roboxmaker_home = { path = "crates/roboxmaker_home" }
roboxmaker_lesson = { path = "crates/roboxmaker_lesson" }
roboxmaker_loaders = { path = "crates/roboxmaker_loaders" }
roboxmaker_login = { path = "crates/roboxmaker_login" }
roboxmaker_main = { path = "crates/roboxmaker_main" }
roboxmaker_meetings = { path = "crates/roboxmaker_meetings" }
roboxmaker_menu = { path = "crates/roboxmaker_menu" }
roboxmaker_message = { path = "crates/roboxmaker_message" }
roboxmaker_models = { path = "crates/roboxmaker_models" }
roboxmaker_myspace = { path = "crates/roboxmaker_myspace" }
roboxmaker_post = { path = "crates/roboxmaker_post" }
roboxmaker_robot = { path = "crates/roboxmaker_robot" }
roboxmaker_schools = { path = "crates/roboxmaker_schools" }
roboxmaker_types = { path = "crates/roboxmaker_types" }
roboxmaker_user = { path = "crates/roboxmaker_user" }
roboxmaker_whiteboard = { path = "crates/roboxmaker_whiteboard" }
roboxmaker_storage = { path = "crates/roboxmaker_storage" }
roboxmaker-graphql = { path = "crates/roboxmaker-graphql" }

log = "0.4"
anyhow = "1"
maplit = "1.0.2"
gloo-file = "0.3"
regex = "1.10"
lazy_static = "1.4.0"
dyn-fmt = "0.4"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
serde_urlencoded = "0.7.1"
yew = { version = "0.21", features = ["csr"] }
# yew-router = { version = "0.15.0", features = ["service", "web_sys"], default-features = false }
yew-router = { version = "0.18"}
serde_derive = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"

serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1"
# yewprint = "0.1.1"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
code_location = "1.1"
gloo-utils = "0.2"
gloo-storage = "0.3"

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Element',
  'DomTokenList',
  'HtmlSelectElement',
  'History',
  'File',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

# [features]
# default = ["web_sys", "common", "wee_alloc"]
# common = ["console_error_panic_hook"]

# web_sys = ["web-sys", "yew/web_sys"]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true