[package]
name = "roboxmaker_ckeditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_types = { path = "../roboxmaker_types" }

log = "0.4"
yew = "0.21"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]