[package]
name = "roboxmaker_ckeditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_types = { path = "../roboxmaker_types" }

log = "0.4"
yew = { version = "0.18", features = ["default", "toml"] }
uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
  'Window',
  'Element',
  'HtmlSelectElement',
]