[package]
name = "roboxmaker_classes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_activity = { path = "../roboxmaker_activity" }
roboxmaker_files = { path = "../roboxmaker_files" }
roboxmaker_loaders = {path = "../roboxmaker_loaders"}
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker_storage = { path = "../roboxmaker_storage" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
yew = "0.21"
log = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
serde = { version = "1.0.143", features = ["derive"] }
code_location = "1.1"
gloo-timers = "0.2"
yew-router =  { version = "0.18"}

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]