[package]
name = "roboxmaker_degree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_classes = { path = "../roboxmaker_classes" }
roboxmaker_post = { path = "../roboxmaker_post" }
roboxmaker_user = { path = "../roboxmaker_user" }
roboxmaker_robot = { path = "../roboxmaker_robot" }
roboxmaker_lesson = { path = "../roboxmaker_lesson" }
roboxmaker_meetings = { path = "../roboxmaker_meetings" }
roboxmaker_quizzes = { path = "../roboxmaker_quizzes" }
roboxmaker_loaders = { path = "../roboxmaker_loaders" }
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker_teacher_resource = { path = "../roboxmaker_teacher_resource" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }


yew = { version = "0.18", features = ["default", "toml"] }
serde = { version = "1.0.152", features = ["derive"] }

uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
yew-router = { version = "0.15.0", features = ["service", "web_sys"], default-features = false }
# yew-router = { version = "0.17" }

log = "0.4"
serde_derive = "1.0.152"
code_location = "1.1"
