[package]
name = "roboxmaker_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_loaders = { path = "../roboxmaker_loaders" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

yew = { version = "0.18", features = ["default", "toml"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }

uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
log = "0.4"
code_location = "1.1"
