[package]
name = "roboxmaker_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_user = { path = "../roboxmaker_user" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_lesson = { path = "../roboxmaker_lesson" }
roboxmaker_classes = { path = "../roboxmaker_classes" }
roboxmaker_degree = { path = "../roboxmaker_degree" }
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_robot = { path = "../roboxmaker_robot" }
roboxmaker_schools = { path = "../roboxmaker_schools" }
roboxmaker_post = { path = "../roboxmaker_post" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_loaders = { path = "../roboxmaker_loaders" }
roboxmaker_meetings = { path = "../roboxmaker_meetings" }
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

log = "0.4"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
# yew = {version = "0.20"}
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde_derive = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
code_location = "1.1"
gloo-utils = "0.2"
gloo-storage = "0.3"
gloo = "0.8.0"