[package]
name = "roboxmaker_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_user = { path = "../roboxmaker_user" }
roboxmaker_lesson = { path = "../roboxmaker_lesson" }
roboxmaker_classes = { path = "../roboxmaker_classes" }
roboxmaker_degree = { path = "../roboxmaker_degree" }
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_robot = { path = "../roboxmaker_robot" }
roboxmaker_schools = { path = "../roboxmaker_schools" }
roboxmaker_post = { path = "../roboxmaker_post" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_loaders = { path = "../roboxmaker_loaders" }
roboxmaker_meetings = { path = "../roboxmaker_meetings" }
roboxmaker_quizzes = { path = "../roboxmaker_quizzes" }
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

log = "0.4"
uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
yew = { version = "0.18", features = ["default", "toml"] }
serde_derive = "1.0.152"
serde = { version = "1.0.152", features = ["derive"] }

code_location = "1.1"
gloo-utils = "0.1.6"
gloo-storage = "0.2.2"