[package]
name = "roboxmaker_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21"
lazy_static = "1.4.0"
maplit = "1.0.2"


[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
  'Window',
  'Element',
  'HtmlSelectElement',
]
