[package]
name = "roboxmaker_menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_models = { path = "../roboxmaker_models" }

log = "0.4"
yew = "0.21"
# yew-router = { version = "0.15.0", features = ["service", "web_sys"], default-features = false }
yew-router = { version = "0.18" }

uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
gloo-utils = "0.2"
gloo-storage = "0.3"
gloo-timers = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]