[package]
name = "roboxmaker_menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_models = { path = "../roboxmaker_models" }

log = "0.4"
yew = { version = "0.18", features = ["default", "toml"] }
yew-router = { version = "0.15.0", features = ["service", "web_sys"], default-features = false }
# yew-router = { version = "0.17" }

uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
gloo-utils = "0.1.6"
gloo-storage = "0.2.2"
