[package]
name = "roboxmaker_message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = {path = "../roboxmaker_main"}
# roboxmaker_degree = {path = "../roboxmaker_degree"}
roboxmaker_ckeditor = {path = "../roboxmaker_ckeditor"}
roboxmaker_types = {path = "../roboxmaker_types"}
roboxmaker_models = {path = "../roboxmaker_models"}
roboxmaker_loaders = {path = "../roboxmaker_loaders"}
roboxmaker-graphql = { path = "../roboxmaker-graphql" }


uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
yew = "0.21"
serde = { version = "1", features = ["derive"] }
yew-router = "0.18"
log = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
serde_derive = "1"
code_location = "1.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]