[package]
name = "roboxmaker_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
roboxmaker_main = {path = "../roboxmaker_main"}
roboxmaker-graphql = {path = "../roboxmaker-graphql"}

anyhow = "1"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
yew = "0.21"
graphql_client = "0.13"
serde = { version = "1", features = ["derive"] }

serde_derive = "1"
serde_json = "1"
log = "0.4"
base64 = "0.21"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
gloo-storage = "0.3"