[package]
name = "roboxmaker_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
roboxmaker_main = {path = "../roboxmaker_main"}
roboxmaker-graphql = {path = "../roboxmaker-graphql"}

anyhow = "1.0.68"
uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
chrono = { version = "0.4.40", features = ["serde"] }
yew = { version = "0.18", features = ["default", "toml"] }
# graphql_client = { version = "0.12.0", features = ["web"] }
graphql_client = "0.12.0"
serde = { version = "1.0.152", features = ["derive"] }

serde_derive = "1.0.152"
serde_json = "1.0.91"
log = "0.4"
base64 = "0.21.0"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }