[package]
name = "roboxmaker_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_ckeditor = { path = "../roboxmaker_ckeditor" }
roboxmaker_message = {path = "../roboxmaker_message"}
roboxmaker_loaders = {path = "../roboxmaker_loaders"}
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }


log = "0.4"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
yew = "0.21"
serde = { version = "1", features = ["derive"] }
yew-router =  { version = "0.18"}

gloo-utils = "0.2"
gloo-storage = "0.3"
code_location = "1.1"
gloo-timers = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]