[package]
name = "roboxmaker_schools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_degree = { path = "../roboxmaker_degree" }
roboxmaker_loaders = { path = "../roboxmaker_loaders" }
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

log = "0.4"
anyhow = "1.0.56"
yew = "0.21"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
serde_derive = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
serde = { version = "1", features = ["derive"] }
yew-router = "0.18"
js-sys = "0.3"
regex = "1.10"
gloo-utils = "0.2"
gloo-storage = "0.3"
code_location = "1.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]