[package]
name = "roboxmaker_searches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_utils = { path = "../roboxmaker_utils" }
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

log = "0.4"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5", "wasm-bindgen"] }
yew = "0.21"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
yew-router = "0.18"
serde_derive = "1"
code_location = "1.1"

# wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
# web-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Element",
  "DomTokenList",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlMediaElement",
  "HtmlElement",
  "Navigator",
  "BinaryType",
  "Blob",
  "FileReader",
  "ProgressEvent",
  "FocusEvent",
  "InputEvent",
  "CssStyleDeclaration"
]