[package]
name = "roboxmaker_searches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboxmaker_types = { path = "../roboxmaker_types" }
roboxmaker_main = { path = "../roboxmaker_main" }
roboxmaker_models = { path = "../roboxmaker_models" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

log = "0.4"
uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
yew = { version = "0.18", features = ["default", "toml"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }

serde_derive = "1.0.152"
code_location = "1.1"
# wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
# web-sys = "0.3.60"