[package]
name = "roboxmaker_teacher_resource"
version = "0.1.0"
edition = "2021"

[dependencies]
roboxmaker_types = {path = "../roboxmaker_types"}
roboxmaker_utils = {path = "../roboxmaker_utils"}
roboxmaker_main = {path = "../roboxmaker_main"}
roboxmaker_ckeditor = {path = "../roboxmaker_ckeditor"}
roboxmaker_models = {path = "../roboxmaker_models"}
roboxmaker_message = {path = "../roboxmaker_message"}
roboxmaker_loaders = {path = "../roboxmaker_loaders"}
roboxmaker_searches = { path = "../roboxmaker_searches" }
roboxmaker-graphql = { path = "../roboxmaker-graphql" }

yew = { version = "0.18", features = ["default", "toml"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }

uuid = { version = "1.2.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
log = "0.4"
js-sys = "0.3.60"
gloo-utils = "0.1.6"
gloo-storage = "0.2.2"
code_location = "1.1"
anyhow = "1.0.68"
serde_json = "1.0.91"

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
  'Window',
  'Element',
  'HtmlSelectElement',
  'XmlHttpRequest',
]